plugins {
    id("java-library")
}

group = "org.phosphantic"
version = "0.1"

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}

repositories {
    mavenCentral()
}

dependencies {
    api("jakarta.annotation:jakarta.annotation-api:3.0.0")
    api("jakarta.inject:jakarta.inject-api:2.0.1")
    api("jakarta.ws.rs:jakarta.ws.rs-api:3.0.0")
    testImplementation(platform("org.junit:junit-bom:5.10.0"))
    testImplementation("org.junit.jupiter:junit-jupiter")
    testImplementation("org.glassfish.jersey.core:jersey-server:3.1.7")
}

test {
    useJUnitPlatform()
}